Text-alignment fix

--- a/main.css
+++ b/main.css
@@ -93,6 +93,7 @@ span {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   background-image: url(dark-sky.jpeg);
   z-index: -1;
   user-select: none;
@@ -104,7 +105,7 @@ span {
 
 .loading {
   position: absolute;
-  z-index: 1;
+  z-index: 2;
 }
 
 
